# ml-agents

./: .pre-commit-config.yaml
colab/: Colab_UnityEnvironment_4_SB3VectorEnv.ipynb
docs/: Python-Gym-API-Documentation.md  Python-PettingZoo-API-Documentation.md  Python-PettingZoo-API.md
ml-agents-envs/: README.md  pyproject.toml  setup.py
ml-agents-envs/mlagents_envs/: base_env.py
ml-agents-envs/mlagents_envs/envs/: env_helpers.py  unity_aec_env.py  unity_gym_env.py  unity_parallel_env.py  unity_pettingzoo_base_env.py
ml-agents/mlagents/trainers/: subprocess_env_manager.py
utils/: generate_markdown_docs.py
